--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 N_ED/3/*/node_modules/
 NEMR/verify/express_verify/node_modules/*
 NEMR/verify/express_verify/image/*
+NEMR/verify/express_verify/avatar/*
 NEMR/verify/mongo_verify/*
 N_ED/3/*
+
