--- a/NEMR/verify/express_verify/package.json
+++ b/NEMR/verify/express_verify/package.json
@@ -10,15 +10,18 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "cheerio-httpcli": "^0.7.3",
     "date-utils": "^1.2.21",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "express-session": "^1.15.6",
     "feedparser": "^2.2.9",
+    "jquery": "^3.3.1",
     "mongoose": "^5.2.6",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "popper.js": "^1.14.4",
     "pug": "^2.0.3",
     "puppeteer": "^1.7.0",
     "qiita-js": "^0.4.3",
